# QBar

./: CMakeLists.txt  CPackConfig.cmake  README.md
src/: CurlRequest.cpp  CurlRequest.h  Main.cpp  QRDetector.cpp  QRDetector.h
src/DBus/: DBus.cpp  DBus.h  DBusPrinter.cpp  DBusPrinter.h
src/Image/: ImageReaderSource.cpp  ImageReaderSource.h
src/System/: Clock.cpp  Clock.h  NoCopy.h  UnicodeString.cpp  UnicodeString.h  Variant.cpp  Variant.h
